update star rating styles

--- a/src/components/star-rating/index.html
+++ b/src/components/star-rating/index.html
@@ -7,9 +7,12 @@
     <title>Star rating</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="card">
+      <div id="app"></div>
 
-    <div id="rating"></div>
+      <div id="rating"></div>
+    </div>
+
 
     <template id="star-template">
         <span data-count="" class="star"></span>
