--- a/src/components/star-rating/styles.css
+++ b/src/components/star-rating/styles.css
@@ -2,7 +2,9 @@
     padding: 0;
 }
 body {
-    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+    background: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+    display: grid;
+    place-items: center;
 }
 .card {
     background-color: white;
@@ -10,21 +12,28 @@ body {
     padding: 20px;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
-body {
-  justify-content: center;
-  flex-direction: column;
-}
 span.star {
     font-size: 34px;
-}
-span.star::before {
-    content: '☆';
-    transition: color 0.3s ease-out;
+    display: inline-block;
+    background-size: cover;
+    background-repeat: no-repeat;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
+    stroke-width: 1px;
 }
-span.star.active::before {
-    content: '★';
-    color: #ffae00;
+span.star svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    stroke: lightgray;
+    stroke-width: 1px;
+    fill: transparent;
+    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+span.star.active svg {
+    fill: orange;
+    stroke: orange;
 }
 #rating {
     min-height: 24px;
