--- a/src/styles.css
+++ b/src/styles.css
@@ -14,15 +14,47 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+ * {
+  box-sizing: border-box;
+ }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  background: #272841;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-auto-flow: row;
+  max-width: 800px;
+  gap: 10px;
+  margin: 0 auto;
+}
+
+a.card {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  background-color: blueviolet;
+  padding: 20px;
+  border: 1px solid transparent;
+  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.07));
+  border-radius: 5px;
+}
+
+a.card:hover {
+  border: 1px solid rgb(28, 28, 28);
+  opacity: 0.5;
+}
+
+h1 {
+  font-size: 30px;
+  text-align: center;
+  color: white;
+  margin: 50px;
+}
 
 #app {
   max-width: 1280px;
