add notification toast component

--- a/src/components/autocomplete/styles.css
+++ b/src/components/autocomplete/styles.css
@@ -1,6 +1,15 @@
 body {
     background: linear-gradient(to top, #6a15d7 0%, #a6c1ee 100%);
 }
+#app {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#app>input {
+    margin-bottom: 300px;
+}
 
 .autocomplete-input {
     height: 40px;
