add autocomplete attribute

--- a/src/components/autocomplete/index.html
+++ b/src/components/autocomplete/index.html
@@ -14,8 +14,8 @@
     <div id="app">
       <div class="results"></div>
       
-      <input class="autocomplete-input" type="text" id="my-search" />
-      <input class="autocomplete-input" type="text" id="my-search-2" />
+      <input autocomplete="off" class="autocomplete-input" type="text" id="my-search" />
+      <input autocomplete="off" class="autocomplete-input" type="text" id="my-search-2" />
     </div>
     <script type="module" src="index.js"></script>
   </body>
