--- a/src/components/file-explorer/index.html
+++ b/src/components/file-explorer/index.html
@@ -71,13 +71,29 @@
       <li class="explorer__item explorer__item--file"></li>
     </template>
 
+    <template id="add-file-template">
+      <li class="explorer__item explorer__item--file"><input class="add-file-input" type="text"/></li>
+    </template>
+
     <template id="folder-template">
       <ul class="explorer__item-expand">
         <li class="explorer__item">
           <span class="explorer__item--folder"></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons"><img src="./assets/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="./assets/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./assets/add-file.svg" alt="Add file"></button>
+          </span>
+        </li>
+      </ul>
+    </template>
+
+    <template id="add-folder-template">
+      <ul class="explorer__item-expand">
+        <li class="explorer__item">
+          <span class="explorer__item--folder"><input class="add-folder-input" type="text"/></span>
+          <span class="explorer__item-options">
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="./assets/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./assets/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
