--- a/src/components/file-explorer/styles.css
+++ b/src/components/file-explorer/styles.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(to bottom, #0e3ff0 0%, #0c1e3d 100%);
-    display: grid;
-    place-items: center;
+    /* display: grid; */
+    /* place-items: center; */
 }
 
 .explorer {
@@ -10,6 +10,7 @@ body {
     padding: 8px;
     list-style: none;
     min-width: 300px;
+    margin-top: 100px;
 }
 
 .explorer__item, .explorer__item-expand {
@@ -67,7 +68,7 @@ body {
 .explorer__item-options {
     /* visibility: hidden; */
     display: flex;
-    display: none;
+    /* display: none; */
 }
 
 .explorer__item:hover .explorer__item-options {
@@ -77,6 +78,7 @@ body {
     padding: 0;
     background-color: transparent;
     border: none;
+    cursor: pointer;
     margin: 0 10px;
 }
 .explorer__item-options-buttons img {
@@ -96,4 +98,20 @@ body {
     height: 24px;
     width: 20px;
     margin-right: 5px;
+}
+
+.folder-close.explorer__item--folder:before {
+    background: url('./assets/close-folder.svg');
+    background-repeat: no-repeat;
+    background-size:100%;
+    height: 24px;
+    width: 20px;
+    background-position: center;
+    margin-right: 5px;
+}
+
+input.add-file-input,
+input.add-folder-input {
+    border-radius: 5px;
+    border: none;
 }
