--- a/components/file-explorer/index.html
+++ b/components/file-explorer/index.html
@@ -33,7 +33,7 @@
         <li class="explorer__item">
           <span class="explorer__item--folder"></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/images/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/add-folder.svg" alt="Add folder"></button>
             <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
