fix recursive logic

--- a/src/components/file-explorer/index.html
+++ b/src/components/file-explorer/index.html
@@ -14,57 +14,6 @@
     
     <div id="file-explorer" class="explorer">
 
-      <!-- <li class="explorer__item explorer__item--file">nginx.conf</li>
-
-      <ul class="explorer__item-expand">
-
-        <li class="explorer__item">
-          <span class="explorer__item--folder">src</span>
-          <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons"><img src="./assets/add-file.svg" alt="Add file"></button>
-          </span>
-        </li>
-
-        <li class="explorer__item explorer__item--file">index.html</li>
-
-        <ul class="explorer__item-expand">
-          <li class="explorer__item">
-            <span class="explorer__item--folder">public</span>
-            <span class="explorer__item-options">
-              <button class="explorer__item-options-buttons"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-              <button class="explorer__item-options-buttons"><img src="./assets/add-file.svg" alt="Add file"></button>
-            </span>
-          </li>
-
-          <li class="explorer__item explorer__item--file">test.html</li>
-
-          <ul class="explorer__item-expand">
-            <li class="explorer__item">
-              <span class="explorer__item--folder">components</span>
-              <span class="explorer__item-options">
-                <button class="explorer__item-options-buttons"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-                <button class="explorer__item-options-buttons"><img src="./assets/add-file.svg" alt="Add file"></button>
-              </span>
-            </li>
-
-            <li class="explorer__item explorer__item--file">app.tsx</li>
-          </ul>
-
-          <ul class="explorer__item-expand">
-            <li class="explorer__item">
-              <span class="explorer__item--folder">config</span>
-              <span class="explorer__item-options">
-                <button class="explorer__item-options-buttons"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-                <button class="explorer__item-options-buttons"><img src="./assets/add-file.svg" alt="Add file"></button>
-              </span>
-            </li>
-            
-            <li class="explorer__item explorer__item--file">config.js</li>
-          </ul>
-        </ul>
-
-      </ul> -->
     </div>
 
     <template id="file-template">
@@ -80,8 +29,8 @@
         <li class="explorer__item">
           <span class="explorer__item--folder"></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./assets/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/images/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
@@ -92,8 +41,8 @@
         <li class="explorer__item">
           <span class="explorer__item--folder"><input class="add-folder-input" type="text"/></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="./assets/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./assets/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/images/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
