--- a/components/file-explorer/index.html
+++ b/components/file-explorer/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>File Explorer</title>
-    <script type="module" crossorigin src="/vanilla-js-ui/assets/file-explorer-9776e3b0.js"></script>
+    <script type="module" crossorigin src="/vanilla-js-ui/assets/file-explorer-662f2cc3.js"></script>
     <link rel="modulepreload" crossorigin href="/vanilla-js-ui/assets/styles-fac82e35.js">
     <link rel="stylesheet" href="/vanilla-js-ui/assets/styles-631f0865.css">
-    <link rel="stylesheet" href="/vanilla-js-ui/assets/index-42cf2aee.css">
+    <link rel="stylesheet" href="/vanilla-js-ui/assets/index-c8045799.css">
   </head>
   <body>
     <a style="position: absolute;left: 30px; top: 30px;border-radius:50%;background-color:azure;height: 40px;width:40px;display:flex;justify-content: center;" href="/vanilla-js-ui/">
@@ -33,8 +33,8 @@
         <li class="explorer__item">
           <span class="explorer__item--folder"></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./images/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/images/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
@@ -45,8 +45,8 @@
         <li class="explorer__item">
           <span class="explorer__item--folder"><input class="add-folder-input" type="text"/></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="./images/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="./images/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/images/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
