--- a/components/file-explorer/index.html
+++ b/components/file-explorer/index.html
@@ -34,7 +34,7 @@
           <span class="explorer__item--folder"></span>
           <span class="explorer__item-options">
             <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/vanilla-js-ui/images/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/images/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/vanilla-js-ui/images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
@@ -45,8 +45,8 @@
         <li class="explorer__item">
           <span class="explorer__item--folder"><input class="add-folder-input" type="text"/></span>
           <span class="explorer__item-options">
-            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/images/add-folder.svg" alt="Add folder"></button>
-            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/images/add-file.svg" alt="Add file"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-folder"><img src="/vanilla-js-ui/images/add-folder.svg" alt="Add folder"></button>
+            <button class="explorer__item-options-buttons explorer__item-add-file"><img src="/vanilla-js-ui/images/add-file.svg" alt="Add file"></button>
           </span>
         </li>
       </ul>
