--- a/src/components/file-explorer/styles.css
+++ b/src/components/file-explorer/styles.css
@@ -10,7 +10,8 @@ body {
     padding: 8px;
     list-style: none;
     min-width: 300px;
-    margin-top: 100px;
+    max-width: 800px;
+    margin: 100px auto;
 }
 
 .explorer__item, .explorer__item-expand {
